--- a/youtube/src/Components/Sidebar/Sidebar.css
+++ b/youtube/src/Components/Sidebar/Sidebar.css
@@ -22,8 +22,9 @@
 
 .sidebar {
   width: 200px;
-  padding-top: 30px;
-  border-right: 1px solid #ccc;
+  padding-top: 1px;
+  border-radius: 1px #ccc;
+  
 }
 .subcription {
   display: flex;
@@ -31,7 +32,7 @@
   gap: 10px;
   padding: 8px 12px;
   cursor: pointer;
-   border-top: 1px solid #ccc;
+  border-top: 1px solid #ccc;
   border-width: full;
   padding-bottom: 8px;
   margin-bottom: 8px;
